@@ -1,5 +1,7 @@
 plugins {
     id 'java-library'
+    id 'application'
+    /* id 'distribution'*/ //todo as long we dont need a jar we leave that out, speeds up build
     alias(libs.plugins.openjfx)
 }
 
@@ -9,6 +11,34 @@ repositories {
 }
 
 apply from: '../buildSrc/bisq-version.gradle'
+
+application {
+   /* project.mainClassName = 'bisq.tools.theme.Main'*/
+    applicationDefaultJvmArgs = ['--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+                                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+                                 '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+run {
+    // Pass command-line properties to application
+    // Normally they'd only be applied to the gradle process, but we need them in the started application
+    // See https://stackoverflow.com/a/23689696
+    systemProperties System.getProperties()
+}
+
+distributions {
+    main {
+        distributionBaseName = 'jfx-dist'
+    }
+}
+
+tasks.named('jar') {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version,
+                'Main-Class': 'bisq.desktopapp.Main')
+    }
+}
 
 javafx {
     version = '16'
@@ -23,23 +53,34 @@ dependencies {
     api platform(project(':platforms:common-platform'))
 
     implementation project(':common')
-    implementation project(':security')
-    implementation project(':network')
     implementation project(':persistence')
-    implementation project(':contract')
+    implementation project(':i18n')
+    implementation project(':security')
+    implementation project(':identity')
+    implementation project(':network')
+    implementation project(':account')
     implementation project(':offer')
+    implementation project(':contract')
+    implementation project(':protocol')
+    implementation project(':oracle')
+    implementation project(':settings')
+    implementation project(':social')
     implementation project(':presentation')
     implementation project(':application')
+    implementation project(':wallets')
     implementation project(':desktop')
 
     implementation libs.guava
-    implementation libs.typesafe.config
 
     implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'de.jensd:fontawesomefx:8.0.0'
     implementation 'de.jensd:fontawesomefx-commons:9.1.2'
     implementation 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9.1.2'
-    implementation 'org.controlsfx:controlsfx:11.1.0'
+    implementation 'org.controlsfx:controlsfx:11.1.1'
+
+    implementation "org.fxmisc.easybind:easybind:1.0.3"
+    implementation 'org.fxmisc.richtext:richtextfx:0.10.9'
+
 }
 test {
     useJUnitPlatform()
